ontol/ontol-compiler/test-cases/error/repr/disjoint_intersection3.on
def level ( // ERROR intersection of disjoint types
    rel .is: 1 // NOTE base type is `ontol.int(1)`
    rel .is: 2 // NOTE base type is `ontol.int(2)`
    rel .is: 3 // NOTE base type is `ontol.int(3)`
)
